# monitelec-reader

./: .gitignore  README.md  install.sh  poetry.toml  pyproject.toml  requirements.txt  setup.cfg
monitelec_reader/: __init__.py  flow.py  record.py  serial_reader.py  service.py
monitelec_reader/config/: __init__.py  settings.toml
monitelec_reader/generator/: __init__.py  teleinfo.data
monitelec_reader/log/: __init__.py  custom.py  logging.yaml
monitelec_reader/share/: monitelec-reader.service
monitelec_reader/tasks/: mqtt.py
