[tool.poetry]
name = "monitelec-reader"
version = "0.0.0"  # dynamic version
description = "Read and process the serial teleinfo data."
authors = ["Jonathan Virga <jonathan.virga@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
aioserial = "^1.3.0"
click = "^8.0.3"
PyYAML = "^6.0"
paho-mqtt = "^1.5.1"
colorlog = "^6.5.0"
dynaconf = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[tool.poetry.scripts]
monitelec-reader = 'monitelec_reader.serial_reader:main'
monitelec-reader-generate-service = 'monitelec_reader.service:generate_service'

[build-system]
requires = ["poetry>=1.0.2", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"
