[metadata]
name = monitelec-reader
version = 0.1.1

[options]
include_package_data = True
packages = find:
install_requires =
    aioserial
    click
    PyYAML
    paho-mqtt
    colorlog
    dynaconf

[options.data_files]
data = monitelec_reader/generator/teleinfo.data
log = monitelec_reader/log/logging.yaml
cfg = monitelec_reader/config/settings.toml

[options.entry_points]
console_scripts =
    monitelec-reader = monitelec_reader.serial_reader:main
